testsuite/poke.pkl/funcall-diag-4.pk
/* { dg-do compile } */

fun foo = (int[2] a) void: {}

foo ([1,2,3]); /* { dg-error "" } */
